fix(sponsors): apply display:block to assure logos are aligned vertically centered

--- a/sass/app.scss
+++ b/sass/app.scss
@@ -668,6 +668,7 @@ body {
       img {
         width: 100%;
         height: auto;
+        display: block;
       }
 
       &.premier-partners {
